--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "graphql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,12 @@
   "homepage": "https://github.com/szy0syz/graphql-server-demo#readme",
   "dependencies": {
     "apollo-server": "^2.9.3",
+    "bcryptjs": "^2.4.3",
     "graphql": "^14.5.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   }
 }
