--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
+    "dayjs": "^1.8.16",
+    "graphql-tag": "^2.10.1",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
