--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^3.1.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "dayjs": "^1.8.16",
     "graphql-tag": "^2.10.1",
