--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "graphql": "^14.5.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.6.13"
+    "mongoose": "^5.6.13",
+    "qiniu": "^7.2.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
